--- a/WebApp/public/stylesheets/style.css
+++ b/WebApp/public/stylesheets/style.css
@@ -62,7 +62,7 @@ body{
     bottom: 10px;
     left: 350px;
     width: 160px;
-    background-color: #FF7700; /* Blue */
+    background-color: #FF7700; /* Orange */
     border: none;
     color: white;
     padding: 15px 32px;
@@ -70,6 +70,21 @@ body{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+#whiteButton{
+  position: absolute;
+  bottom: 10px;
+  left: 520px;
+  width: 160px;
+  background-color: #FFFFFF; /* White */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
 
 #fullscreenButton{
