--- a/WebApp/public/stylesheets/style.css
+++ b/WebApp/public/stylesheets/style.css
@@ -28,6 +28,14 @@ body{
   height: 100%;
 }
 
+#VideoThumbnail{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10%;
+  height: 10%;
+}
+
 #greenButton{
     position: absolute;
     bottom: 10px;
