Auto-load on start

--- a/WebApp/public/stylesheets/style.css
+++ b/WebApp/public/stylesheets/style.css
@@ -15,9 +15,10 @@ body{
 }
 
 #playButton{
-  width: 15%;
-  max-width: 200px;
+  width: 20%;
   cursor: pointer;
+  position:absolute;
+  opacity:75%;
 }
 
 #Video{
